test_regress/t/t_property_pexpr_unsup.out
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:33:9: Logical operator UNTIL expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                    : ... note: In instance 't'
   33 |       a until b;
      |         ^~~~~
                     ... For warning description see https://verilator.org/warn/WIDTHTRUNC?v=latest
                     ... Use "/* verilator lint_off WIDTHTRUNC */" and lint_on around source to disable this message.
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:33:9: Logical operator UNTIL expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                    : ... note: In instance 't'
   33 |       a until b;
      |         ^~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:37:9: Logical operator UNTIL expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                    : ... note: In instance 't'
   37 |       a s_until b;
      |         ^~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:37:9: Logical operator UNTIL expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                    : ... note: In instance 't'
   37 |       a s_until b;
      |         ^~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:41:9: Logical operator UNTIL expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                    : ... note: In instance 't'
   41 |       a until_with b;
      |         ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:41:9: Logical operator UNTIL expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                    : ... note: In instance 't'
   41 |       a until_with b;
      |         ^~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:45:9: Logical operator UNTIL expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                    : ... note: In instance 't'
   45 |       a s_until_with b;
      |         ^~~~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:45:9: Logical operator UNTIL expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                    : ... note: In instance 't'
   45 |       a s_until_with b;
      |         ^~~~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:49:9: Logical operator IMPLICATION expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                    : ... note: In instance 't'
   49 |       a #-# b;
      |         ^~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:49:9: Logical operator IMPLICATION expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                    : ... note: In instance 't'
   49 |       a #-# b;
      |         ^~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:53:9: Logical operator IMPLICATION expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                    : ... note: In instance 't'
   53 |       a #=# b;
      |         ^~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:53:9: Logical operator IMPLICATION expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                    : ... note: In instance 't'
   53 |       a #=# b;
      |         ^~~
%Error-UNSUPPORTED: t/t_property_pexpr_unsup.v:89:32: Unsupported/illegal unbounded ('$') in this context.
                                                    : ... note: In instance 't'
   89 |       nexttime s_eventually [2:$] always a;
      |                                ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: t/t_property_pexpr_unsup.v:89:32: right side of bit range isn't a two-state constant (IEEE 1800-2023 6.9.1)
                                        : ... note: In instance 't'
   89 |       nexttime s_eventually [2:$] always a;
      |                                ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:93:7: Logical operator LOGOR expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                    : ... note: In instance 't'
   93 |       accept_on (a) b;
      |       ^~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:93:7: Logical operator LOGOR expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                    : ... note: In instance 't'
   93 |       accept_on (a) b;
      |       ^~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:97:7: Logical operator LOGOR expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                    : ... note: In instance 't'
   97 |       sync_accept_on (a) b;
      |       ^~~~~~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:97:7: Logical operator LOGOR expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                    : ... note: In instance 't'
   97 |       sync_accept_on (a) b;
      |       ^~~~~~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:101:7: Logical operator LOGNOT expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                     : ... note: In instance 't'
  101 |       reject_on (a) b;
      |       ^~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:101:7: Logical operator LOGAND expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                     : ... note: In instance 't'
  101 |       reject_on (a) b;
      |       ^~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:105:7: Logical operator LOGNOT expects 1 bit on the LHS, but LHS's VARREF 'a' generates 32 bits.
                                                     : ... note: In instance 't'
  105 |       sync_reject_on (a) b;
      |       ^~~~~~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:105:7: Logical operator LOGAND expects 1 bit on the RHS, but RHS's VARREF 'b' generates 32 bits.
                                                     : ... note: In instance 't'
  105 |       sync_reject_on (a) b;
      |       ^~~~~~~~~~~~~~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:122:7: Logical operator PROPIF expects 1 bit on the condp, but condp's VARREF 'a' generates 32 bits.
                                                     : ... note: In instance 't'
  122 |       if (a) b
      |       ^~
%Warning-WIDTHTRUNC: t/t_property_pexpr_unsup.v:125:7: Logical operator PROPIF expects 1 bit on the condp, but condp's VARREF 'a' generates 32 bits.
                                                     : ... note: In instance 't'
  125 |       if (a) b else c
      |       ^~
%Error: Exiting due to
